--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>پورتفولیو میلاد</title>
+  <title>Milad Tahajody</title>
 </head>
 <body>
   <h1>Milad Tahajody</h1>
