--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr" data-theme="light">
 <head>
-  <meta charset="UTF-8">
-  <title>Milad Tahajody</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-  <h1>Milad Tahajody</h1>
-  <p>Senior Ui/UX Designer & Consultant</p>
-  <p>Master of IT engineering</p>
- 
+    <div class="controls">
+        <button id="themeToggle">Dark | Light </button>
+        <button id="langToggle"> فارسی | English </button>
+    </div>
+    <main class="content">
+        <h1 id="name">Milad Tahajody</h1>
+        <h2 id="title">Senior UI/UX Designer and Consultant</h2>
+        <div class="socials">
+            <a href="https://www.instagram.com/milad_tahajody" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="http://www.linkedin.com/in/milad-tahajody" target="_blank"><i class="fab fa-linkedin"></i></a>
+        </div>
+    </main>
+    <script src="script.js"></script>
 </body>
 </html>
