--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             bottom: 0;
             padding: 20px;
             width: 100%;
-            display: flex;
+            display: none;
             justify-content: right;
             pointer-events: none;
             z-index: calc(var(--infinity, 2147483647));
